# ALG2D

./: CMakeLists.txt  compile.sh  main.cpp  run.sh
Header/: line.cpp  line.h  lineOthers.cpp  lineOthers.h  matrix.cpp  matrix.h  point.cpp  point.h  pointOthers.cpp  pointOthers.h  readFile.cpp  readFile.h  region.cpp  region.h  section.cpp  section.h  util.cpp  util.h  vector.cpp  vector.h
